--- a/src/app/esgithub/home-page/program-item-list/program-actions/program-actions.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-actions/program-actions.component.html
@@ -1,6 +1,6 @@
 <div class="mt-6 flex justify-between">
   <button
-    class="text-white flex items-center px-20 py-4 bg-[#333333] rounded-lg"
+    class="text-white flex items-center px-20 bg-[#333333] rounded-lg"
     (click)="onLikeBtnClick()"
   >
     <div class="mr-3">
@@ -20,25 +20,24 @@
       </span>
       <span *ngIf="userReaction !== ReactionEnum.LIKE">
         <svg
-          width="25"
-          height="25"
-          viewBox="0 0 25 25"
+          width="30"
+          height="30"
+          viewBox="0 0 30 30"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M1.75 8.42784C1.75011 7.25732 2.12058 6.1141 2.81259 5.1556C3.50477 4.19686 4.48521 3.46945 5.6207 3.07626C6.75634 2.68302 7.9891 2.64423 9.14847 2.96548C10.3077 3.28669 11.3342 3.95135 12.0881 4.86517C12.2306 5.03787 12.4428 5.13789 12.6667 5.13789C12.8906 5.13789 13.1027 5.03787 13.2452 4.86517C13.9991 3.95135 15.0256 3.28669 16.1849 2.96548C17.3442 2.64423 18.577 2.68302 19.7126 3.07626C20.8481 3.46945 21.8286 4.19686 22.5207 5.1556C23.2127 6.11408 23.5832 7.25727 23.5833 8.42777V8.42784C23.5833 12.1446 20.8437 15.351 18.185 17.5963C16.5414 18.9725 14.7565 20.1785 12.8588 21.1949L12.8586 21.195C12.8472 21.2002 12.8359 21.2057 12.8248 21.2114C12.7766 21.2364 12.722 21.2499 12.6658 21.25C12.6127 21.2501 12.561 21.2382 12.5148 21.2159C12.5089 21.2127 12.503 21.2095 12.497 21.2065L12.4693 21.1922L12.4673 21.1911L12.3781 21.1455L12.0352 20.9589C10.3005 19.9929 8.6643 18.867 7.14865 17.5966C4.49106 15.351 1.75 12.1446 1.75 8.42784ZM1.75 8.42784L1 8.42777L1.75 8.42784Z"
+            d="M14.8708 26.1914L14.8627 26.1867L14.8322 26.1709L14.7245 26.1158L14.334 25.9033C12.375 24.8127 10.527 23.5412 8.81504 22.1061C5.8579 19.6077 2.57129 15.8593 2.57129 11.3694C2.57143 9.90443 3.03519 8.47555 3.89871 7.27949C4.76223 6.08342 5.98304 5.179 7.39304 4.69075C8.80304 4.2025 10.3329 4.15444 11.7719 4.55318C13.211 4.95192 14.4884 5.77786 15.4284 6.91726C16.3684 5.77786 17.6459 4.95192 19.0849 4.55318C20.524 4.15444 22.0538 4.2025 23.4638 4.69075C24.8738 5.179 26.0946 6.08342 26.9582 7.27949C27.8217 8.47555 28.2854 9.90443 28.2856 11.3694C28.2856 15.8593 25.0006 19.6077 22.0418 22.1061C20.1849 23.661 18.1684 25.0232 16.0247 26.1709L15.9941 26.1867L15.9861 26.1914H15.9829C15.8121 26.2799 15.6218 26.3262 15.4286 26.3265C15.2354 26.3268 15.045 26.281 14.874 26.193L14.8708 26.1914Z"
             stroke="white"
-            stroke-width="1.5"
-            stroke-linejoin="round"
+            stroke-width="2"
           />
         </svg>
       </span>
     </div>
-    {{ numberOfLikes | countDisplay }} Like(s)
+    {{ numberOfLikes | countDisplay }} Likes
   </button>
   <button
-    class="text-white flex items-center px-20 py-4 bg-[#333333] rounded-lg"
+    class="text-white flex items-center px-20 py-3 bg-[#333333] rounded-lg"
     [routerLink]="['/program', programId]"
   >
     <div class="mr-3">
@@ -56,10 +55,10 @@
         />
       </svg>
     </div>
-    {{ programCommentCount }} Comment(s)
+    {{ programCommentCount }} Comments
   </button>
   <button
-    class="text-white flex items-center px-20 py-4 bg-[#333333] rounded-lg"
+    class="text-white flex items-center px-20 bg-[#333333] rounded-lg"
     [routerLink]="['/program', programId]"
   >
     <div class="mr-3">
