adding filter popover

--- a/src/app/esgithub/edit-user-program/edit-user-program.component.html
+++ b/src/app/esgithub/edit-user-program/edit-user-program.component.html
@@ -54,22 +54,22 @@
 
             <div class="relative top-4 flex">
               <img
-                *ngIf="program.programmingLanguage === 'python'"
+                *ngIf="program.programmingLanguage === AvailableLangages.PYTHON"
                 src="assets/images/icons/python-svgrepo-com.svg"
                 style="height: 40px; width: 40px"
               />
               <img
-                *ngIf="program.programmingLanguage === 'javascript'"
+                *ngIf="program.programmingLanguage === AvailableLangages.JAVASCRIPT"
                 src="assets/images/icons/javascript-svgrepo-com.svg"
                 style="height: 40px; width: 40px"
               />
               <img
-                *ngIf="program.programmingLanguage === 'c++'"
+                *ngIf="program.programmingLanguage === AvailableLangages.CPLUSPLUS"
                 src="https://raw.githubusercontent.com/isocpp/logos/master/cpp_logo.png"
                 style="height: 40px; width: 40px"
               />
               <img
-                *ngIf="program.programmingLanguage === 'php'"
+                *ngIf="program.programmingLanguage === AvailableLangages.PHP"
                 src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Twemoji_1f4a9.svg"
                 style="height: 40px; width: 40px"
               />
