refactor side profile

--- a/src/app/core/components/side-navbar/display-icons-navbar/display-icons-navbar.component.html
+++ b/src/app/core/components/side-navbar/display-icons-navbar/display-icons-navbar.component.html
@@ -122,7 +122,7 @@
     </span>
   </ng-container>
 
-  <span *ngIf="iconName === 'account_circle'">
+  <!-- <span *ngIf="iconName === 'account_circle'">
     <mat-icon>{{ iconName }}</mat-icon>
-  </span>
+  </span> -->
 </div>
