--- a/src/app/esgithub/side-profile/side-profile.component.html
+++ b/src/app/esgithub/side-profile/side-profile.component.html
@@ -1,41 +1,61 @@
-<aside class="w-[330px] bg-[#141414] h-screen hidden xl:block">
-  <div class="flex flex-col justify-center items-center">
-    <img
-      class="w-[170px] h-[170px] rounded-full object-cover mb-3 mt-3"
-      [src]="
-        currentUser.avatarUrl ? 'http://' + currentUser.avatarUrl : anonymousImageUrl
-      "
-    />
-    <a [routerLink]="'/profile/' + currentUser.userId" class="text-white"
-      >{{ currentUser.firstName }} {{ currentUser.lastName }}</a
-    >
-    <p class="text-[#707396]">{{ currentUser.userName }}</p>
-  </div>
-
+<aside class="w-[400px] bg-[#141414] h-screen hidden xl:block">
   <ng-container *ngIf="userFollowersAndFollowings$ | async as userFollowersAndFollowings">
+    <div class="flex flex-col justify-center items-center">
+      <img
+        class="w-[170px] h-[170px] rounded-full object-cover mb-3 mt-9"
+        [src]="
+          currentUser.avatarUrl ? 'http://' + currentUser.avatarUrl : anonymousImageUrl
+        "
+      />
+      <a [routerLink]="'/profile/' + currentUser.userId" class="text-white"
+        >{{ currentUser.firstName }} {{ currentUser.lastName }}</a
+      >
+      <p class="text-[#6C6C6C] w-80 text-center my-5">
+        {{ currentUser.bio }}
+      </p>
+
+      <div class="flex justify-around w-full">
+        <div>
+          <p class="text-white text-2xl font-bold text-center">
+            {{ userFollowersAndFollowings.followers.length }}
+          </p>
+          <p class="text-[#6C6C6C]">Followers</p>
+        </div>
+
+        <div>
+          <p class="text-white text-2xl font-bold text-center">
+            {{ currentUserProgramCount }}
+          </p>
+          <p class="text-[#6C6C6C]">Publications</p>
+        </div>
+        <div>
+          <p class="text-white text-2xl font-bold text-center">
+            {{ userFollowersAndFollowings.followings.length }}
+          </p>
+          <p class="text-[#6C6C6C]">Following</p>
+        </div>
+      </div>
+    </div>
+
     <div class="flex justify-around mt-10">
       <div>
-        <a href="" class="text-[#707396]"
+        <a href="" class="text-white"
           >Followers({{ userFollowersAndFollowings.followers.length }})</a
         >
       </div>
       <div>
-        <a href="" class="text-[#707396]">See all</a>
+        <a href="" class="text-white">See all</a>
       </div>
     </div>
 
-    <div class="h-72 overflow-auto">
+    <div class="h-52 overflow-auto">
       <ng-container>
-        <ng-container *ngFor="let followers of userFollowersAndFollowings.followers">
-          <app-follower-following
-            [followerOrFollowingUsername]="followers.follower.userName"
-            [followerOrFollowingPicture]="followers.follower.avatarUrl"
-            [userId]="followers.follower.userId"
-          ></app-follower-following>
+        <ng-container *ngFor="let follower of userFollowersAndFollowings.followers">
+          <app-follower [follower]="follower"></app-follower>
         </ng-container>
 
         <div
-          class="text-center mt-8 text-[#707396]"
+          class="text-center mt-8 text-white"
           *ngIf="userFollowersAndFollowings.followers.length === 0"
         >
           no followers
@@ -45,26 +65,22 @@
 
     <div class="flex justify-around mt-10">
       <div>
-        <a href="" class="text-[#707396]"
+        <a href="" class="text-white"
           >Following({{ userFollowersAndFollowings.followings.length }})</a
         >
       </div>
       <div>
-        <a href="" class="text-[#707396]">See all</a>
+        <a href="" class="text-white">See all</a>
       </div>
     </div>
-    <div class="h-72 overflow-auto">
+    <div class="h-52 overflow-auto">
       <ng-container>
-        <ng-container *ngFor="let Followings of userFollowersAndFollowings.followings">
-          <app-follower-following
-            [followerOrFollowingUsername]="Followings.following.userName"
-            [followerOrFollowingPicture]="Followings.following.avatarUrl"
-            [userId]="Followings.following.userId"
-          ></app-follower-following>
+        <ng-container *ngFor="let following of userFollowersAndFollowings.followings">
+          <app-following [following]="following"></app-following>
         </ng-container>
 
         <div
-          class="text-center mt-8 text-[#707396]"
+          class="text-center mt-8 text-white"
           *ngIf="userFollowersAndFollowings.followings.length === 0"
         >
           no followings
