--- a/src/app/esgithub/home-page/search-program-input/search-program-input.component.html
+++ b/src/app/esgithub/home-page/search-program-input/search-program-input.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center pl-6 py-1 text-white bg-[#333333] rounded mb-10">
+<div class="flex items-center pl-6 py-1 text-white bg-[#333333] w-[710px] rounded mb-10">
   <span>
     <svg
       width="35"
@@ -19,6 +19,6 @@
     type="text"
     placeholder="Search..."
     [formControl]="searchControl"
-    class="outline-none bg-[#333333] p-3 pl-2 text-white w-[580px]"
+    class="outline-none bg-[#333333] p-3 pl-2 text-white w-full"
   />
 </div>
