--- a/src/app/esgithub/side-profile/side-profile.component.html
+++ b/src/app/esgithub/side-profile/side-profile.component.html
@@ -1,4 +1,4 @@
-<aside class="w-[400px] bg-[#141414] h-screen hidden xl:block">
+<aside class="w-[365px] bg-[#141414] h-screen overflow-auto hidden xl:block">
   <ng-container *ngIf="userFollowersAndFollowings$ | async as userFollowersAndFollowings">
     <div class="flex flex-col justify-center items-center">
       <img
