--- a/src/app/core/modals/conifrmatio-modal/confirmation-modal.component.html
+++ b/src/app/core/modals/conifrmatio-modal/confirmation-modal.component.html
@@ -1,21 +1,21 @@
 <div class="fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50">
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+  <div class="bg-[#212121] rounded-lg shadow-lg overflow-hidden">
     <div class="px-4 py-5 sm:px-6">
-      <h3 class="text-lg leading-6 font-medium text-gray-900">{{ data.title }}</h3>
+      <h3 class="text-lg leading-6 font-medium text-white">{{ data.title }}</h3>
     </div>
     <div class="px-4 py-5 sm:p-6">
-      <p class="text-sm text-gray-500">{{ data.message }}</p>
+      <p class="text-sm text-white">{{ data.message }}</p>
     </div>
     <div class="px-4 py-4 sm:px-6 sm:flex sm:flex-row-reverse">
       <button
         (click)="onConfirmationBtnClick()"
-        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm"
+        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-[#141414] text-base font-medium text-white sm:ml-3 sm:w-auto sm:text-sm"
       >
         yes
       </button>
       <button
         (click)="onCancelBtnClick()"
-        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
+        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-[#141414] text-base font-medium text-white sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
       >
         No
       </button>
