--- a/src/app/core/modals/share-code-modal/share-code-modal.component.html
+++ b/src/app/core/modals/share-code-modal/share-code-modal.component.html
@@ -1,4 +1,4 @@
-<div class="p-8 rounded-lg shadow-lg bg-[#1E1F3D]">
+<div class="p-8 rounded-lg shadow-lg bg-[#212121]">
   <div class="mb-4">
     <label for="description" class="block text-md italic font-bold text-white mb-2"
       >Description</label
@@ -7,36 +7,37 @@
       [(ngModel)]="description"
       id="description"
       rows="3"
-      class="mt-1 block w-full rounded-md border border-white p-4 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
+      class="mt-1 block w-full rounded-md bg-[#212121] text-white border border-zinc-600 p-3 outline-none"
       placeholder="Enter your description here..."
     ></textarea>
   </div>
 
-  <div class="mb-4 border border-white bg-white p-4 rounded-md">
-    <label class="block text-md italic font-bold text-black mb-2">Input Files</label>
-    <div class="mt-1">
+  <div class="mb-4 p-4">
+    <label class="block text-md italic font-bold mb-2 text-white">Input Files</label>
+    <div class="mt-1 grid grid-cols-4">
       <label
         *ngFor="let type of inputFileTypeOptions; let i = index"
-        class="inline-flex items-center mr-2"
+        class="block relative pl-8 mt-4 cursor-pointer items-center checkbox-container"
       >
         <input
           [ngClass]="{ 'ml-4': i !== 0 }"
           type="checkbox"
-          class="form-checkbox h-5 w-5 text-indigo-600"
+          class="form-checkbox h-5 w-5 text-white"
           [(ngModel)]="type.checked"
           name="inputType{{ i }}"
         />
+        <span class="checkmark"></span>
         <span class="ml-1 text-gray-500">{{ type.value }}</span>
       </label>
     </div>
   </div>
 
-  <div class="mb-4 border border-white bg-white p-4 rounded-md">
-    <label class="block text-md italic font-bold text-black mb-2">Output Files</label>
-    <div class="mt-1">
+  <div class="mb-4 p-4">
+    <label class="block text-md italic font-bold text-white mb-2">Output Files</label>
+    <div class="mt-1 grid grid-cols-4">
       <label
         *ngFor="let type of outputFileTypeOptions; let i = index"
-        class="inline-flex items-center mr-2"
+        class="block relative pl-8 mt-4 cursor-pointer items-center checkbox-container"
       >
         <input
           [ngClass]="{ 'ml-4': i !== 0 }"
@@ -45,17 +46,18 @@
           [(ngModel)]="type.checked"
           name="outputType{{ i }}"
         />
+        <span class="checkmark"></span>
         <span class="ml-1 text-gray-500">{{ type.value }}</span>
       </label>
     </div>
   </div>
 
-  <div class="mb-4 border border-white bg-white p-4 rounded-md">
-    <label class="block text-md italic font-bold text-black mb-2">Visibility</label>
-    <div class="mt-2">
+  <div class="mb-4 p-4">
+    <label class="block text-md italic font-bold mb-2 text-white">Visibility</label>
+    <div class="mt-2 grid grid-cols-4">
       <label
         *ngFor="let vis of visibilityOptions; let i = index"
-        class="inline-flex items-center text-sm mr-2"
+        class="block relative pl-8 mt-4 cursor-pointer items-center checkbox-container"
       >
         <input
           [ngClass]="{ 'ml-4': i !== 0 }"
@@ -65,6 +67,7 @@
           [(ngModel)]="visibility"
           [value]="vis.value"
         />
+        <span class="checkmark"></span>
         <span class="ml-1 text-gray-500">{{ vis.label }}</span>
       </label>
     </div>
@@ -73,13 +76,13 @@
   <div class="flex">
     <button
       (click)="shareCode()"
-      class="px-4 py-2 bg-blue-800 text-white rounded hover:bg-blue-900 w-[50%] mr-2"
+      class="px-4 py-2 bg-[#333333] text-white rounded w-[50%] mr-2"
     >
       Share
     </button>
     <button
       (click)="cancel()"
-      class="px-4 py-2 bg-red-800 text-white rounded hover:bg-red-900 w-[50%] ml-2"
+      class="px-4 py-2 bg-[#9D3F3F] text-white rounded w-[50%] ml-2"
     >
       Cancel
     </button>
