--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,39 @@
     --mdc-snackbar-supporting-text-color: #fff;
   }
 }
+
+/* Hide the browser's default checkbox */
+.checkbox-container input[type='checkbox'],
+.checkbox-container input[type='radio'] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 2px;
+  border: 2px solid #6c6c6c;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input[type='checkbox']:checked ~ .checkmark,
+.checkbox-container input[type='radio']:checked ~ .checkmark {
+  box-shadow: inset 0 0 0 2px #212121; /* Adjust the shadow size to control the space */
+  background-color: #6c6c6c;
+}
+.is-user-connected {
+  border: 2px solid #32af3f;
+  padding: 2px;
+}
+.user-not-connected {
+  border: 2px solid #919191;
+  padding: 2px;
+}
