--- a/src/app/core/modals/group-publish-modal/group-publish-modal.component.html
+++ b/src/app/core/modals/group-publish-modal/group-publish-modal.component.html
@@ -13,8 +13,8 @@
     />
   </div>
 
-  <div class="mb-4">
-    <p class="text-md font-medium text-white mb-4">Select Language</p>
+  <p class="text-md font-medium text-white mb-4">Select Language</p>
+  <div class="mb-4 grid grid-cols-4">
     <label
       *ngFor="let language of languages"
       class="block relative pl-8 cursor-pointer items-center checkbox-container mb-3"
